fix: white space on right side

--- a/ReactDemo/src/content/Projects.css
+++ b/ReactDemo/src/content/Projects.css
@@ -47,6 +47,10 @@
     right: -20px !important;
 }
 
+.slick-dots li.slick-active button:before {
+    color: var(--text-primary) !important;
+}
+
 .CardInfo {
     display: flex;
     flex-direction: column;
