--- a/ReactDemo/src/index.css
+++ b/ReactDemo/src/index.css
@@ -7,10 +7,8 @@
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 
-  /* Default theme */
+  /* Dark theme */
   --background: #242424;
   --text-primary: white;
   --text-secondary: #a8a8a8;
@@ -20,16 +18,26 @@
   --darkest: #000000;
 }
 
-/* Alternative theme */
-[data-theme='dark'] {
-  --background: #242424;
-  --text-primary: white;
-  --text-secondary: #dedede;
-  --primary-container: #6d6d6d;
-  --accent: #333333;
+/* Light theme */
+[data-theme='light'] {
+  --background: #ffffff;
+  --text-primary: #252525;
+  --text-secondary: #444444;
+  --primary-container: #b7b7b7;
+  --accent: #c9c9c9;
+  --accent-secondary: #d7d7d7;
 }
 
-html { scroll-behavior: smooth;}
+html {
+  width: 100%;
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
 
 .App {
   color: var(--text-primary);
@@ -87,3 +95,4 @@ a {
   transform: scale(1.1) translateX(-50%);
   transform-origin: center;
 }
+
